--- a/analysis/requirements.txt
+++ b/analysis/requirements.txt
@@ -1,6 +1,10 @@
-dask>=2023.5.0
+dask[dataframe]>=2023.5.0
 distributed
 matplotlib>=3.7.3
 numpy>=1.24.3
 pyarrow>=12.0.1
 rich>=13.6.0
+jupyterlab
+jupyter-server-proxy
+ipywidgets
+pandas>=2.0.3
