--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.4)
-project(dfprofiler LANGUAGES C CXX)
+project(datacrumbs LANGUAGES C CXX)
 
-set(DFT_EBPF_SRC src/dfprofiler/library.c src/dfprofiler/library.h)
+set(DFT_EBPF_SRC src/datacrumbs/library.c src/datacrumbs/library.h)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_library(${PROJECT_NAME} SHARED ${DFT_EBPF_SRC})
 
