--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cmake.configureArgs": [
         "-DCMAKE_PREFIX_PATH=/home/cc/datacrumbs/dependency/.spack-env/view"
-    ]
+    ],
+    "editor.formatOnSave": true
 }
