--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -4,7 +4,7 @@ mode: trace
 file: trace.pfw
 user:
   - name: app
-    link: /home/hariharandev1.linux/datacrumbs/build/tests/df_tracer_test
+    link: /home/cc/datacrumbs/build/tests/df_tracer_test
     regex: .*
   - name: mpi
     link: /opt/spack/opt/spack/linux-ubuntu22.04-m1/gcc-11.4.0/openmpi-5.0.5-j267g7kotefkm6e5hi7veb6xzak4gozk/lib/libmpi.so
