--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -4,11 +4,14 @@ mode: trace
 file: trace.pfw
 user:
   - name: app
-    link: /home/cc/datacrumbs/build/tests/df_tracer_test
+    link: /opt/datacrumbs/build/tests/df_tracer_test
     regex: .*
   - name: mpi
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-m1/gcc-11.4.0/openmpi-5.0.5-j267g7kotefkm6e5hi7veb6xzak4gozk/lib/libmpi.so
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/openmpi-5.0.5-cikcsmrpj7iig4ptjdekpd3lnlktupyv/lib/libmpi.so
     regex: ^PMPI.*
+  - name: hdf5
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/hdf5-1.14.5-y4edcb5v3m6etrnwbavqkhy663wva5ra/lib/libhdf5.so
+    regex: ^H5.*
 
 profile:
   interval_sec: 0.0001
