--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -7,10 +7,10 @@ user:
     link: /opt/ior/install/bin/ior
     regex: .*
   - name: mpi
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/openmpi-5.0.5-4a5uwfh5giognvdtk7r33qbzzafke4me/lib/libmpi.so
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-skylake_avx512/gcc-11.4.0/openmpi-5.0.5-nhqsyp7dg7av22tbu3j4v7kyniocbitn/lib/libmpi.so
     regex: ^PMPI.*
   - name: hdf5
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/hdf5-1.14.5-3y4ojmnfqwx6stovnnmwzg2gjrh7v47p/lib/libhdf5.so
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-skylake_avx512/gcc-11.4.0/hdf5-1.14.5-koneomxj35c5mjo47e5qqz7jxuiesgqo/lib/libhdf5.so
     regex: ^H5.*
 
 profile:
