Added STDIO Case

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "cmake.configureArgs": [
         "-DCMAKE_PREFIX_PATH=/home/cc/datacrumbs/dependency/.spack-env/view"
     ],
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "files.associations": {
+        "string": "cpp"
+    }
 }
