--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
 find_package(MPI REQUIRED)
 add_executable(df_tracer_test test.cpp)
 target_link_libraries(df_tracer_test MPI::MPI_CXX)
+
+add_executable(df_tracer_test_stdio test_stdio.cpp)
+target_link_libraries(df_tracer_test_stdio MPI::MPI_CXX)
