--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -6,12 +6,12 @@ user:
   - name: app1
     link: /home/cc/datacrumbs/build/tests/df_tracer_test_stdio
     regex: .*
-  - name: app2
-    link: /home/cc/datacrumbs/build/tests/df_tracer_test
-    regex: .*
-  - name: app3
-    link: /opt/ior/install/bin/ior
-    regex: .*
+  # - name: app2
+  #   link: /home/cc/datacrumbs/build/tests/df_tracer_test
+  #   regex: .*
+  # - name: app3
+  #   link: /opt/ior/install/bin/ior
+  #   regex: .*
   # - name: mpi
   #   link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/openmpi-5.0.5-jia45w3wv65epg4kwlx4vkqlsdm4acc7/lib/libmpi.so
   #   regex: ^PMPI.*
@@ -24,3 +24,4 @@ profile:
 
 trace:
   args: 1
+  type: perf # ring_buffer
