fixed the missing events.

--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -6,15 +6,22 @@ user:
   - name: app
     link: /opt/ior/install/bin/ior
     regex: .*
-  - name: mpi
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/openmpi-5.0.5-4a5uwfh5giognvdtk7r33qbzzafke4me/lib/libmpi.so
-    regex: ^PMPI.*
-  - name: hdf5
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-haswell/gcc-11.4.0/hdf5-1.14.5-3y4ojmnfqwx6stovnnmwzg2gjrh7v47p/lib/libhdf5.so
-    regex: ^H5.*
+  # - name: app2
+  #   link: /home/cc/datacrumbs/build/tests/df_tracer_test
+  #   regex: .*
+  # - name: app3
+  #   link: /opt/ior/install/bin/ior
+  #   regex: .*
+  # - name: mpi
+  #   link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/openmpi-5.0.5-jia45w3wv65epg4kwlx4vkqlsdm4acc7/lib/libmpi.so
+  #   regex: ^PMPI.*
+  # - name: hdf5
+  #   link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/hdf5-1.14.5-gynnpoztefewkn2sfomwzdvpe3okwlaf/lib/libhdf5.so
+  #   regex: ^H5.*
 
 profile:
   interval_sec: 0.0001
 
 trace:
   args: 1
+  type: ring_buffer # ring_buffer
