--- a/datacrumbs/configs/module/default.yaml
+++ b/datacrumbs/configs/module/default.yaml
@@ -12,12 +12,12 @@ user:
   # - name: app3
   #   link: /opt/ior/install/bin/ior
   #   regex: .*
-  # - name: mpi
-  #   link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/openmpi-5.0.5-jia45w3wv65epg4kwlx4vkqlsdm4acc7/lib/libmpi.so
-  #   regex: ^PMPI.*
-  # - name: hdf5
-  #   link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/hdf5-1.14.5-gynnpoztefewkn2sfomwzdvpe3okwlaf/lib/libhdf5.so
-  #   regex: ^H5.*
+  - name: mpi
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/openmpi-5.0.5-jia45w3wv65epg4kwlx4vkqlsdm4acc7/lib/libmpi.so
+    regex: ^PMPI.*
+  - name: hdf5
+    link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/hdf5-1.14.5-gynnpoztefewkn2sfomwzdvpe3okwlaf/lib/libhdf5.so
+    regex: ^H5.*
 
 profile:
   interval_sec: 0.0001
