added all configurations for paper.

--- a/datacrumbs/configs/module/ior_mpiio.yaml
+++ b/datacrumbs/configs/module/ior_mpiio.yaml
@@ -1,17 +1,14 @@
 name: default
 install_dir: build
 mode: trace
-file: trace.pfw
+file: trace-mpiio.pfw
 user:
-  - name: app3
+  - name: ior
     link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/ior-4.0.0-arszr4x4i7xuua4opbyx73oqq7tlzljo/bin/ior
     regex: .*
   - name: mpi
     link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/openmpi-5.0.5-jia45w3wv65epg4kwlx4vkqlsdm4acc7/lib/libmpi.so
     regex: ^PMPI.*
-  - name: hdf5
-    link: /opt/spack/opt/spack/linux-ubuntu22.04-icelake/gcc-11.4.0/hdf5-1.14.5-gynnpoztefewkn2sfomwzdvpe3okwlaf/lib/libhdf5.so
-    regex: ^H5.*
 
 profile:
   interval_sec: 0.0001
